<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_main_main"
        android:icon="@drawable/nav_item_main"
        android:title="@string/main_home" />

    <item
        android:id="@+id/item_main_folder"
        android:icon="@drawable/folder_detail"
        android:title="@string/folder" />

    <item
        android:id="@+id/item_main_upload"
        android:icon="@drawable/upload"
        android:title="@string/upload_cloud" />

    <item
        android:id="@+id/item_main_statistics"
        android:icon="@drawable/statistics"
        android:title="@string/statistics" />

    <item
        android:id="@+id/item_main_profile"
        android:icon="@drawable/nav_item_info"
        android:title="@string/main_my_info" />

</menu>