<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view_main"
        android:name="team.y2k2.globa.main.main.MainFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_main_bottom"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_main_bottom"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        app:cornerRadius="12dp"
        app:itemIconTint="@color/primary"
        app:itemPaddingBottom="10dp"
        app:itemPaddingTop="15dp"
        app:itemRippleColor="@color/primaryDark"
        app:itemTextColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/navigation_main_items" />

</androidx.constraintlayout.widget.ConstraintLayout>